--- a/.github/workflows/Update robots.yml
+++ b/.github/workflows/Update robots.yml
@@ -25,4 +25,6 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: ./update-robots
+        run: |
+          chmod +x ./update-robots
+          ./update-robots
